guestbook-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: default
spec:
  type: ClusterIP # 改成 ClusterIP 模式
  selector:
    app: guestbook-ui 
  ports:
    - port: 80
      targetPort: 80
      # nodePort 已經徹底移除了
