guestbook-helm/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: guestbook-destination
  namespace: default
spec:
  host: guestbook-ui   # 對應你的 Service 名稱
  subsets:
    - name: v1
      labels:
        version: v1   # 對應 v1 版 Pod 的標籤
    - name: v2
      labels:
        version: v2   # 對應 v2 版 Pod 的標籤
